fix: ヘッダーのz-indexを削除

--- a/src/global/global.css
+++ b/src/global/global.css
@@ -49,7 +49,6 @@ body {
 header {
   position: sticky;
   top: 0;
-  z-index: 100;
   margin-bottom: 4px;
 }
 
